--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Hydra Template
-url: "https://proud-alligator.cloudvent.net"
+title: Arthurs Point
+url: "www.arthurspoint.co.uk"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,15 +10,15 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product marketing template for Jekyll.
+description: Alternative Folk band from Wookey Hole
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
-social:
-  name: Hydra Template
-  links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+# social:
+#   name: Hydra Template
+#   links:
+#     - https://github.com/CloudCannon/hydra-jekyll-template
 
 # -----
 # Build
