--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,11 +10,7 @@
   link: /tracks/
   new_window: false
   highlight: false
-- name: Gigs
-  link: /gigs/
+- name: Contact
+  link: /contact/
   new_window: false
   highlight: false
-# - name: Blog
-#   link: /blog/
-#   new_window: false
-#   highlight: false
